Issue with local record cache were resolved.